Display custom error  component on messages component Fix scrollbar in messages component

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,10 @@
 	text-align: right;
 }
 
+.center {
+	margin: 0 auto;
+}
+
 .container-options a{
 	color: white;
 	padding: 10px;
